# commando

./: .gitignore  Cargo.toml  LICENSE  README.md  check_staging_test  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  discussion.yaml  feature_request.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml
docs/: README.md  architecture.md  design.md  development.md  flow.md  requirements.md
src/: app.rs  cli.rs  commit_executor.rs  commit_message.rs  commit_types.rs  input_collector.rs  main.rs  staging_checker.rs  validation.rs
src/adapters/: README.md  git_executor.rs  git_staging.rs  mod.rs
src/adapters/git/: error.rs  executor.rs  mod.rs  staging.rs
src/adapters/ui/: mod.rs  terminal.rs
src/adapters/ui/ratatui/: confirm.rs  highlight_syntax.rs  mod.rs  preview.rs  prompt.rs  select.rs  syntax.rs  terminal_setup.rs
src/adapters/ui/terminal/: mod.rs  ui_impl.rs
src/cli/: command.rs  error.rs  mod.rs
src/compiler/: ast.rs  compile.rs  error.rs  generator.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  token.rs
src/domain/: commit_message.rs  commit_type.rs  error.rs  mod.rs
src/editor/: launcher.rs  mod.rs  resolver.rs
src/git/: backend.rs  commit.rs  mod.rs
src/input/: error.rs  mod.rs
src/input/direct/: error.rs  mod.rs
src/input/editor/: error.rs  mod.rs  template.rs
src/input/file/: mod.rs  reader.rs
src/input/interactive/: builder.rs  error.rs  mod.rs  prompt.rs  validator.rs
src/input/interactive/sections/: body.rs  footer.rs  header.rs  mod.rs
src/input/paste/: mod.rs  reader.rs
src/message/: file.rs  mod.rs  parser.rs  template.rs
src/ports/: executor.rs  input.rs  mod.rs  staging.rs  ui.rs
(+21 files in other folders)
